production/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: blokmap-ingress
    labels:
        app.kubernetes.io/name: blokmap-ingress
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/configuration-snippet: |
            resolver 1.1.1.1 1.0.0.1 valid=300s;
            resolver_timeout 10s;

            more_clear_headers Strict-Transport-Security;
            add_header Strict-Transport-Security 'max-age=31536000; includeSubdomains; preload';

            more_clear_headers Referrer-Policy X-Frame-Options X-Content-Type-Options X-Powered-By Server;

            add_header Referrer-Policy origin-when-cross-origin;
            add_header X-Frame-Options SAMEORIGIN;
            add_header X-Content-Type-Options "nosniff";

            add_header Permissions-Policy interest-cohort=();

            add_header Content-Security-Policy "default-src 'self'; script-src 'self' *.mapbox.com cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com fonts.scalar.com; img-src 'self' data: blob: https:; connect-src 'self' *.mapbox.com mapbox.com; worker-src 'self' blob:; child-src 'self' blob:; object-src 'none'; base-uri 'none'; frame-ancestors 'none'; form-action 'none';" always;

    #     cert-manager.io/issuer: "letsencrypt-staging"
spec:
    tls:
      - secretName: blokmap-self-cert
        hosts:
          - dev.blokmap.io
    rules:
      - host: dev.blokmap.io
        http:
            paths:
              - path: "/api/auth(/|$)(.*)"
                pathType: ImplementationSpecific
                backend:
                    service:
                        name: auth
                        port:
                            number: 80
              - path: "/api(/|$)(.*)"
                pathType: ImplementationSpecific
                backend:
                    service:
                        name: backend
                        port:
                            number: 80
              - path: "/static(/|$)(.*)"
                pathType: ImplementationSpecific
                backend:
                    service:
                        name: static
                        port:
                            number: 80
              - path: "/()(.*)"
                pathType: ImplementationSpecific
                backend:
                    service:
                        name: frontend
                        port:
                            number: 80
